# egorsmkv.github.io

./: README.md  index.html  kurdish-real-time-speech-recognition.html
django/: README.md
latin-to-hebrew/: index.html
lead2crm/: index.html
lead2crm/v0.1/: buy.html  index.html
loguru-viewer/: index.html
mcp-inspector/: index.html
mel-spec-browser/: Caddyfile  README.md  app.js  bun.lockb  index.html  js-colormaps.min.js  ringbuffer.min.js  wav_worker.js  worker.js
phonikud-renikud/: .gitignore  app.py  pyproject.toml
phonikud-tts/: .gitignore  app.py  pyproject.toml
photo360/1/: index.html  style.css
photo360/2/: index.html  jquery.reel.withzoom.js
ror-map/: index.html
rukopys-viewer/: index.html
