[project]
name = "phonikud-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "phonikud>=0.4.1",
    "phonikud-onnx>=1.0.6",
    "renikud-onnx>=0.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]
